--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,7 @@ nav {
 /* ------------------------- */
 
 /* ---- secondsection.js ---- */
+
 .seccopy-font1 {
     text-align: center;
     color: #000000;
@@ -92,5 +93,54 @@ nav {
     color: #000000;
     font-size: 20px;
     margin-top: 30px;
+}
+
+.member-introduction {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    justify-content: center;
+}
+
+.teacher-item {
+    display: flex;
+}
+
+.teacher-item img {
+    width: 200px;
+}
+
+.teacher-section-info {
+    font-weight: bold;
+}
+
+.teacher-name-en {
+    font-weight: bold;
+    color: #67D2E7;
+    margin-top: 8px;
+    margin-bottom: 0px;
+    font-size: 20px;
+}
+
+.teacher-name-ja {
+    font-weight: bold;
+    color: #67D2E7;
+    font-size: 14px;
+    margin: 0 0 0 0;
+}
+
+.teacher-section-text-list {
+    list-style-type: none;
+    padding: 0 0 0 0;    
+}
+
+.teacher-section-text::before {
+    content: "・";
+}
+
+.sample_button {
+    margin-top: 10px;
+    text-align: center;
 }
 /* ------------------------- */
