--- a/src/style.css
+++ b/src/style.css
@@ -141,6 +141,60 @@ nav {
 
 .sample_button {
     margin-top: 10px;
+    margin-bottom: 40px;
     text-align: center;
+}
+/* ------------------------- */
+
+/* ---- thirdsection.js ---- */
+.thirdconatainer {
+    background-color: #3B424B
+}
+
+.thirdconatainer-inner {
+    width: 96%;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 80px 0 20px;
+}
+
+.thirdcopy-font1 {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    text-align: center;
+    color: #fff;
+}
+
+.thirdcopy-em1 {
+    font-size: 40px;
+}
+
+.program-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    list-style: none;
+    padding: 0;
+    margin: 60px auto 40px;
+}
+
+.program-list-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 18px;
+    width: 24%;
+    height: 108px;
+    margin-bottom: 12px;
+}
+
+.program-list-item-image {  
+    position: absolute;
+}
+
+.program-list-item-name {
+    position: relative;
+    
 }
 /* ------------------------- */
