--- a/src/style.css
+++ b/src/style.css
@@ -217,3 +217,52 @@ nav {
     text-align: center;
 }
 /* ------------------------- */
+
+/* ---- footer.js ---- */
+footer {
+    text-align: center;
+    background: #fff;
+    padding: 0;
+}
+
+.footer-inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container-inner {
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
+.footer-logo {
+    width: 120px;
+    margin-bottom: 0;   
+}
+
+.footer-link {
+    display: flex;
+    margin: 0;
+    list-style: none;
+    padding: 0;
+    font-weight: bold;
+}
+
+.footer-link a {
+    font-size: 12px;
+    text-decoration: none;
+    color: #000000;
+}
+
+.footer-link li {
+    margin-right: 16px;
+    margin-bottom: 0px;
+}
+
+.footer-copyright {
+    margin: 0;
+    font-size: 10px;
+    color: #000000;
+}
+/* ------------------- */
